2008-10-26  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/pxljr.xml: Added information about known bugs and a link
	  to a fix for the duplex printing support.

2008-10-23  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/HP-Officejet_K7100.xml, printer/HP-OfficeJet_K7100.xml:
	  Corrected mistyped printer name (Bug #198).

2008-10-18  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/bjc600.xml, driver/bjc800.xml: A fix for the bug that
	  this driver does not work when Ghostscript is fed with PDF is
	  available now. Updated the text appropriately, with a link to
	  the patch.

2008-10-15  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/Postscript-HP.xml: Added link to prototype PPD package to
	  "Postscript-HP" driver entry.

	* printer/HP-DeskJet_540C.xml, printer/HP-DeskJet_540.xml,
	  driver/cdj500.xml, driver/cdj550.upp.xml, driver/cdj550.xml,
	  driver/djet500.xml, driver/gimp-print.xml,
	  driver/gutenprint.xml, driver/gutenprint52.xml, driver/hpdj.xml,
	  driver/pcl3.xml, opt/159.xml, opt/207.xml, opt/208.xml,
	  opt/217.xml, opt/218.xml, opt/220.xml, opt/3.xml, opt/6.xml,
	  opt/7.xml: HP DeskJet 540 and HP DeskJet 540C are different
	  printers, the former holds only one cartridge at a time, the
	  latter two. Fixed the entries and the data to get proper PPDs.

2008-10-14  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/bjc600.xml, driver/bjc800.xml: Modified command line
	  prototype so that "gs" call is not in the beginning. This way
	  foomatic-rip (varsion 4 or newer) always feeds in PostScript
	  and never PDF. With PDF Ghostscript crashes with these drivers
	  (http://bugs.ghostscript.com/show_bug.cgi?id=690032).

	* db/source/opt/207.xml: Some printers were put into the wrong device
	  class for the "pcl3" driver.

	* driver/appledmp.xml, driver/bj8gc12f.upp.xml,
	  driver/bj8hg12f.upp.xml, driver/bj8oh06n.upp.xml,
	  driver/bj8pa06n.upp.xml, driver/bj8pp12f.upp.xml,
	  driver/bj8ts06n.upp.xml, driver/bjc600.xml,