@@ -31,23 +31,16 @@
     <en>
     Multi-function device (printer/copier/fax).&lt;p&gt;
 
-    For basic printing functionality use the &lt;a href=&quot;
-    http://hplip.sf.net/&quot;&gt;HPIJS driver &lt;/a&gt;. 
-    For advanced functionality such as printer status, maintenance 
-    features, scanning and photo card unload use the &lt;a href=&quot;
-    http://hplip.sf.net/&quot;&gt;HPLIP driver&lt;/a&gt; (which includes 
-    HPIJS). &lt;p&gt;
-
-    In contrary to other multi-function devices the hardware only
-    supports printing from the PC, not scanning or PC-assisted faxing
-    or copying. Faxing or copying can only be done via the front
-    panel.
+    In contrary to other multi-function devices from HP the hardware
+    only supports printing from the PC, not scanning or PC-assisted
+    faxing or copying. Faxing or copying can only be done via the
+    front panel.
 
     The printing engine of this device is the same as in the
     monochrome DeskJet 520 printer, so printing will work with
     various drivers.&lt;p&gt;
 
-    This printer has a 600x300-dpi-REt mode which is probably not accessable
+    This printer has a 600x300-dpi-REt mode which is not accessible
     with free software.&lt;p&gt;
 
     </en>
