@@ -3,6 +3,8 @@
 	* driver/pxljr.xml: Added information about known bugs and a link
 	  to a fix for the duplex printing support.
 
+	* printer/HP-OfficeJet.xml: Text updates (Bug #198).
+
 2008-10-23  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* printer/HP-Officejet_K7100.xml, printer/HP-OfficeJet_K7100.xml:
